# postgres-pubsub

./: .envTEMPLATE  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
examples/: publish.py  subscribe.py
postgres_pubsub/: pubsub.py
